[package]
name = "varflags"
version = "0.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Crate exporting varflags macro, allowing to use unit-like enums in conjunction with Varflags struct to create easy to use bitflags data structure defined over enum variants."
repository = "https://github.com/TRI99ERED/varflags"
readme = "README.md"
keywords = ["bitflags", "data-structure", "bitset"]
categories = ["data-structures"]


[features]
serde = ["dep:serde", "bitworks/serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
varflags_attribute = "0.0.3"
bitworks = "0.1.5"
serde = { version = "1.0.196", optional = true, features = ["derive"] }
