[package]
name = "varflags_attribute"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[features]
serde = ["dep:serde", "bitworks/serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitworks = { git = "https://github.com/TRI99ERED/bitworks" }
quote = "*"
syn = { version = "*", features = ["full"] }
proc-macro2 = "*"
serde = { version = "*", optional = true, features = ["derive"] }
